Data is now protected in memory as well as at rest