@@ -1,1 +1,2 @@
 Protection des donnees en memoire en plus du chiffrement de la base de donnees
+Correction d'un bug dans l'expiration des donnees copiees
